--- a/index.html
+++ b/index.html
@@ -17,30 +17,30 @@
           <button class="js-cal-button">AC</button>
           <button class="js-cal-button">+/-</button>
           <button class="js-cal-button">%</button>
-          <button class="js-cal-button">&divide;</button>
+          <button class="js-cal-button orange">&divide;</button>
       </div>
       <div class="js-cal-button-row">
-          <button class="js-cal-button">7</button>
-          <button class="js-cal-button">8</button>
-          <button class="js-cal-button">9</button>
-          <button class="js-cal-button">&times;</button>
+          <button class="js-cal-button darkgray">7</button>
+          <button class="js-cal-button darkgray">8</button>
+          <button class="js-cal-button darkgray">9</button>
+          <button class="js-cal-button orange">&times;</button>
       </div>
       <div class="js-cal-button-row">
-          <button class="js-cal-button">4</button>
-          <button class="js-cal-button">5</button>
-          <button class="js-cal-button">6</button>
-          <button class="js-cal-button">&minus;</button>
+          <button class="js-cal-button darkgray">4</button>
+          <button class="js-cal-button darkgray">5</button>
+          <button class="js-cal-button darkgray">6</button>
+          <button class="js-cal-button orange">&minus;</button>
       </div>
       <div class="js-cal-button-row">
-          <button class="js-cal-button">1</button>
-          <button class="js-cal-button">2</button>
-          <button class="js-cal-button">3</button>
-          <button class="js-cal-button">&plus;</button>
+          <button class="js-cal-button darkgray">1</button>
+          <button class="js-cal-button darkgray">2</button>
+          <button class="js-cal-button darkgray">3</button>
+          <button class="js-cal-button orange">&plus;</button>
       </div>
       <div class="js-cal-button-row">
-          <button class="js-cal-button">0</button>
-          <button class="js-cal-button">&period;</button>
-          <button class="js-cal-button">&equals;</button>
+          <button class="js-cal-button darkgray wide">0</button>
+          <button class="js-cal-button darkgray">&period;</button>
+          <button class="js-cal-button orange">&equals;</button>
       </div>
     </div>
   </div>
