Complete HTML Structure

--- a/index.html
+++ b/index.html
@@ -8,6 +8,44 @@
     <title>JS Calculator</title>
 </head>
 <body>
+    <div class="js-calc-container">
+        <div class="js-calc">
+            <div class="js-calc-display-container">
+                <div id="js-calc-display">1234567890</div>
+            </div>
+            <div class="js-calc-buttons-container">
+                <div class="js-calc-button-row">
+                    <button class="js-calc-button">AC</button>
+                    <button class="js-calc-button">+/-</button>
+                    <button class="js-calc-button">%</button>
+                    <button class="js-calc-button">&divide;</button>
+                </div>
+                <div class="js-calc-button-row">
+                    <button class="js-calc-button">7</button>
+                    <button class="js-calc-button">8</button>
+                    <button class="js-calc-button">9</button>
+                    <button class="js-calc-button">&times;</button>
+                </div>
+                <div class="js-calc-button-row">
+                    <button class="js-calc-button">4</button>
+                    <button class="js-calc-button">5</button>
+                    <button class="js-calc-button">6</button>
+                    <button class="js-calc-button">&minus;</button>
+                </div>
+                <div class="js-calc-button-row">
+                    <button class="js-calc-button">1</button>
+                    <button class="js-calc-button">2</button>
+                    <button class="js-calc-button">3</button>
+                    <button class="js-calc-button">&plus;</button>
+                </div>
+                <div class="js-calc-button-row">
+                    <button class="js-calc-button">0</button>
+                    <button class="js-calc-button">&period;</button>
+                    <button class="js-calc-button">&equals;</button>
+                </div>                
+            </div>
+        </div>
+    </div>
     <script src="./script.js"></script>
 </body>
 </html>
