--- a/index.html
+++ b/index.html
@@ -14,31 +14,31 @@
     </div>
     <div class="js-cal-button-area">
       <div class="js-cal-button-row">
-          <button class="js-cal-button">AC</button>
-          <button class="js-cal-button">+/-</button>
-          <button class="js-cal-button">%</button>
+          <button class="js-cal-button" id="js-cal-btn-clear">AC</button>
+          <button class="js-cal-button" id="js-cal-btn-opposite">+/-</button>
+          <button class="js-cal-button" id="js-cal-btn-percent">%</button>
           <button class="js-cal-button orange">&divide;</button>
       </div>
       <div class="js-cal-button-row">
-          <button class="js-cal-button darkgray">7</button>
-          <button class="js-cal-button darkgray">8</button>
-          <button class="js-cal-button darkgray">9</button>
+          <button class="js-cal-button darkgray number">7</button>
+          <button class="js-cal-button darkgray number">8</button>
+          <button class="js-cal-button darkgray number">9</button>
           <button class="js-cal-button orange">&times;</button>
       </div>
       <div class="js-cal-button-row">
-          <button class="js-cal-button darkgray">4</button>
-          <button class="js-cal-button darkgray">5</button>
-          <button class="js-cal-button darkgray">6</button>
+          <button class="js-cal-button darkgray number">4</button>
+          <button class="js-cal-button darkgray number">5</button>
+          <button class="js-cal-button darkgray number">6</button>
           <button class="js-cal-button orange">&minus;</button>
       </div>
       <div class="js-cal-button-row">
-          <button class="js-cal-button darkgray">1</button>
-          <button class="js-cal-button darkgray">2</button>
-          <button class="js-cal-button darkgray">3</button>
+          <button class="js-cal-button darkgray number">1</button>
+          <button class="js-cal-button darkgray number">2</button>
+          <button class="js-cal-button darkgray number">3</button>
           <button class="js-cal-button orange">&plus;</button>
       </div>
       <div class="js-cal-button-row">
-          <button class="js-cal-button darkgray wide">0</button>
+          <button class="js-cal-button darkgray number wide">0</button>
           <button class="js-cal-button darkgray">&period;</button>
           <button class="js-cal-button orange">&equals;</button>
       </div>
