Implement Addition Button Function

--- a/index2.html
+++ b/index2.html
@@ -11,37 +11,37 @@
     <div class="js-calc-container">
         <div class="js-calculator">
             <div class="js-calc-display-container">
-                <div id="js-cal-display">123456789</div>
+                <div id="js-cal-display">0</div>
             </div>
             <div class="js-calc-buttons-container">
                 <div class="js-calc-button-row">
-                    <button class="js-calc-button">AC</button>
-                    <button class="js-calc-button">+/-</button>
-                    <button class="js-calc-button">&percnt;</button>
-                    <button class="js-calc-button btn-orange">&divide;</button>
+                    <button class="js-calc-button" id="btn-clear">AC</button>
+                    <button class="js-calc-button" id="btn-opposite">+/-</button>
+                    <button class="js-calc-button" id="btn-percent">&percnt;</button>
+                    <button class="js-calc-button btn-orange" id="btn-division" name="divide">&divide;</button>
                 </div>
                 <div class="js-calc-button-row">
-                    <button class="js-calc-button btn-darkgray">7</button>
-                    <button class="js-calc-button btn-darkgray">8</button>
-                    <button class="js-calc-button btn-darkgray">9</button>
-                    <button class="js-calc-button btn-orange">&times;</button>
+                    <button class="js-calc-button btn-darkgray btn-number" id="btn-seven">7</button>
+                    <button class="js-calc-button btn-darkgray btn-number" id="btn-eight">8</button>
+                    <button class="js-calc-button btn-darkgray btn-number" id="btn-nine">9</button>
+                    <button class="js-calc-button btn-orange" id="btn-multiplication" name="multiply">&times;</button>
                 </div>
                 <div class="js-calc-button-row">
-                    <button class="js-calc-button btn-darkgray">4</button>
-                    <button class="js-calc-button btn-darkgray">5</button>
-                    <button class="js-calc-button btn-darkgray">6</button>
-                    <button class="js-calc-button btn-orange">&minus;</button>
+                    <button class="js-calc-button btn-darkgray btn-number" id="btn-four">4</button>
+                    <button class="js-calc-button btn-darkgray btn-number" id="btn-five">5</button>
+                    <button class="js-calc-button btn-darkgray btn-number" id="btn-six">6</button>
+                    <button class="js-calc-button btn-orange" id="btn-subtraction" name="subtract">&minus;</button>
                 </div>
                 <div class="js-calc-button-row">
-                    <button class="js-calc-button btn-darkgray">1</button>
-                    <button class="js-calc-button btn-darkgray">2</button>
-                    <button class="js-calc-button btn-darkgray">3</button>
-                    <button class="js-calc-button btn-orange">&plus;</button>
+                    <button class="js-calc-button btn-darkgray btn-number" id="btn-one">1</button>
+                    <button class="js-calc-button btn-darkgray btn-number" id="btn-two">2</button>
+                    <button class="js-calc-button btn-darkgray btn-number" id="btn-three">3</button>
+                    <button class="js-calc-button btn-orange" id="btn-addition" name="add">&plus;</button>
                 </div>
                 <div class="js-calc-button-row">
-                    <button class="js-calc-button btn-darkgray btn-wide">0</button>
-                    <button class="js-calc-button btn-darkgray">&period;</button>
-                    <button class="js-calc-button btn-orange">&equals;</button>
+                    <button class="js-calc-button btn-darkgray btn-number btn-wide" id="btn-zero">0</button>
+                    <button class="js-calc-button btn-darkgray btn-number" id="btn-decimal">&period;</button>
+                    <button class="js-calc-button btn-orange" id="btn-equal">&equals;</button>
                 </div>                
             </div>
         </div>
